fix: 修复一些bug